# ICPSeeker

./: Cargo.toml  README.md  dfx.json  download-ii.sh  env.js  package-lock.json  package.json
src/icpseeker_backend/: Cargo.toml  icpseeker_backend.did
src/icpseeker_backend/src/: lib.rs
src/icpseeker_backend/src/ai_service/: analyzer.rs  mod.rs
src/icpseeker_backend/src/auth/: mod.rs
src/icpseeker_backend/src/encryption/: mod.rs
src/icpseeker_backend/src/models/: bank.rs  chat.rs  cv.rs  education.rs  mod.rs  rate_limit.rs  types.rs  user.rs
src/icpseeker_backend/src/services/: chat.rs
src/icpseeker_backend/src/services/ai/: mod.rs  service.rs
src/icpseeker_backend/src/storage/: memory.rs  mod.rs
src/icpseeker_backend/src/tests/: e2e_tests.rs  encryption_tests.rs  mod.rs
src/icpseeker_backend/src/types/: errors.rs
src/icpseeker_backend/src/validation/: mod.rs
src/icpseeker_frontend/: index.html  package.json  postcss.config.js  tailwind.config.js  vite.config.js
src/icpseeker_frontend/src/: App.jsx  index.scss  main.jsx
src/icpseeker_frontend/src/auth/: AuthManager.js
src/icpseeker_frontend/src/components/Auth/: AuthButton.jsx
src/icpseeker_frontend/src/components/Button/: index.jsx
src/icpseeker_frontend/src/pages/: AskAI.jsx  Businesses.jsx  CVAnalyzer.jsx  JobPage.jsx  JobPostings.jsx  LandingPage.jsx  LoginBusiness.jsx  OnBoardingRegister.jsx  Register.jsx  RegisterBusiness.jsx  VerifyCertificate.jsx
src/icpseeker_frontend/src/utils/: polyfills.js
src/internet_identity/: internet_identity.wasm
(+8 files in other folders)
