[package]
name = "icpseeker_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-timers = "0.10" # Feel free to remove this dependency if you don't need timers
serde = { version = "1.0", features = ["derive"] }
ic-stable-structures = "0.5.6"
serde_bytes = "0.11"
ic-cdk-macros = "0.8.1"
rstest = "0.18.2"
pretty_assertions = "1.4.0"
